efk-stack/templates/kibana-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kibana-allow-only-namespace
  namespace: efk
spec:
  podSelector:
    matchLabels:
      app: kibana
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: efk
      ports:
        - protocol: TCP
          port: 5601
